High/check-privilege-escalation-for-node-proxy/.chainsaw-test/crb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb01
subjects:
- kind: ServiceAccount
  namespace: test2
  name: bar1
roleRef:
  kind: ClusterRole
  name: check-execute-command-node-proxy
  apiGroup: rbac.authorization.k8s.io
