High/check-privilege-escalation-for-node-proxy/.chainsaw-test/crb-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb01
subjects:
- kind: ServiceAccount
  namespace: test4
  name: bar1
roleRef:
  kind: ClusterRole
  name: check-execute-command-node-proxy
  apiGroup: rbac.authorization.k8s.io
