High/check-privilege-escalation-for-node-proxy/.chainsaw-test/good-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  namespace: test4
  name: check-execute-command-node-proxy
rules:
- apiGroups: ["*"]
  resources: ["nodes/proxy"]
  verbs: ["update"]
