High/check-privilege-escalation-for-node-proxy/.chainsaw-test/rb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badrb01
  namespace: test2
subjects:
- kind: ServiceAccount
  name: foo
  namespace: test2
roleRef:
  kind: Role
  name: check-execute-command-node-proxy
  apiGroup: rbac.authorization.k8s.io
