High/check-privilege-escalation-for-node-proxy/.chainsaw-test/rb-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: goodrb01
  namespace: test4
subjects:
- kind: ServiceAccount
  name: foo
  namespace: test4
roleRef:
  kind: Role
  name: check-execute-command-node-proxy
  apiGroup: rbac.authorization.k8s.io
