High/check-privilege-escalation-for-node-proxy/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-privilege-escalation-for-node-proxy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
